# syngesture

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  syngestures.toml
src/: config.rs  epoll.rs  errorlog.rs  events.rs  macros.rs  main.rs
