[package]
name = "syngestures"
version = "0.1.0"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>"]
edition = "2018"
description = "Configurable multi-touch gesture daemon for Linux, originally targeting `xf86-input-synaptics`."
readme = "README.md"
homepage = "http://neosmart.net/blog/2020/multi-touch-gestures-on-linux/"
repository = "https://github.com/mqudsi/syngesture"
license = "MIT"
keywords = [ "multi-touch", "gestures", "synaptics", "syngesture" ]
categories = [ "command-line-utilities", "os" ]

[dependencies]
log = "0.4.14"
regex = "1.5.4"
serde = { version = "1.0.126", features = [ "derive" ] }
serde_repr = "0.1.7"
toml = "0.5.8"
