[package]
name = "syngestures"
version = "1.0.0"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>"]
edition = "2018"
description = "Configurable multi-touch gesture daemon for Linux, originally targeting `xf86-input-synaptics`."
readme = "README.md"
homepage = "http://neosmart.net/blog/2020/multi-touch-gestures-on-linux/"
repository = "https://github.com/mqudsi/syngesture"
license = "MIT"
keywords = [ "multi-touch", "gestures", "synaptics", "syngesture" ]
categories = [ "command-line-utilities", "os" ]

[dependencies]
aho-corasick = "0.7.18"
log = "0.4.17"
regex = "1.6.0"
serde = { version = "1.0.139", features = [ "derive" ] }
serde_repr = "0.1.8"
toml = "0.5.9"
