[package]
name = "syngestures"
version = "2.0.0"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>"]
edition = "2018"
description = "Configurable multi-touch gesture daemon for Linux, originally targeting `xf86-input-synaptics`."
readme = "README.md"
homepage = "http://neosmart.net/blog/2020/multi-touch-gestures-on-linux/"
repository = "https://github.com/mqudsi/syngesture"
license = "MIT"
keywords = [ "multi-touch", "gestures", "linux", "syngesture", "input" ]
categories = [ "command-line-utilities", "os" ]

[dependencies]
evdev-rs = "0.6.1"
libc = { version = "0.2.154", default-features = false }
log = "0.4.21"
pretty_env_logger = { version = "0.5.0", optional = true }
serde = { version = "1.0.200", features = [ "derive" ] }
serde_repr = "0.1.19"
toml = "0.8.12"

[features]
default = []
logging = ["dep:pretty_env_logger"]
